--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="col-md-4 col-sm-6">
         <div class="item-boxes wow fadeInDown" data-wow-delay="0.6s">
           <div class="icon">
-            <i class="lnr lnr-tree"></i>
+            <i class="lnr lnr-leaf"></i>
           </div>
           <h4>Outdoor Living Spaces</h4>
           <p>Create the perfect outdoor area with decks, patios, and landscaping to enhance your home’s curb appeal.</p>
@@ -123,7 +123,7 @@
       <div class="col-md-4 col-sm-6">
         <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
           <div class="icon">
-            <i class="lnr lnr-hammer"></i>
+            <i class="lnr lnr-cog"></i>
           </div>
           <h4>Repair & Maintenance</h4>
           <p>We handle all types of home repairs and maintenance to keep your property in top condition.</p>
