--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <div class="section-header">          
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Contact <span>US</span></h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">You can email us at luitelshr@berkeley.edu for more questions.</p>
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">You can email us at info@mdvbc.com for more questions.</p>
         </div>
         <!-- <div class="row justify-content-md-center">
           <div class="col-md-8">
